send message to external client

--- a/code/backend/.env
+++ b/code/backend/.env
@@ -3,3 +3,4 @@ SQL_PORT=3306
 SQL_DB=system
 SQL_USER=appuser
 SQL_PASS=vyHYPA7lYvBnP
+API_WTZ_URL=http://prod002.ison-duck.ts.net:3000/send/message
