update whatsapp message sender

--- a/code/frontend/angular.json
+++ b/code/frontend/angular.json
@@ -17,18 +17,32 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+						"outputPath": "dist/dashboard",
+						"index": "src/index.html",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/favicon.ico",
+							"src/assets",
+							"src/assets/fonts/Montserrat-Regular.ttf",
               {
                 "glob": "**/*",
                 "input": "public"
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "src/assets/scss/main.scss",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules",
+                "src/assets/scss/"
+              ]
+            },
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
