--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -2,6 +2,10 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
+    "dep": "npm install --legacy-peer-deps",
+    "res": "npm install ./DsB3/b3-design-system-resource.tgz --save --legacy-peer-deps",
+    "lib": "npm install ./DsB3/b3-design-system-lib.tgz --save --legacy-peer-deps",
+    "cdk": "npm install @angular/cdk --save --legacy-peer-deps",
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "build": "ng build",
@@ -23,6 +27,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.1",
+    "@angular/cdk": "^20.2.4",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
@@ -31,7 +37,13 @@
     "@angular/platform-server": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.2",
+    "@popperjs/core": "^2.11.8",
+    "@swimlane/ngx-datatable": "^22.0.0",
+    "bootstrap": "^5.3.8",
     "express": "^5.1.0",
+    "ngx-toastr": "^19.1.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
