--- a/code/backend/.env
+++ b/code/backend/.env
@@ -3,5 +3,6 @@ SQL_PORT=3306
 SQL_DB=system
 SQL_USER=appuser
 SQL_PASS=vyHYPA7lYvBnP
+#API_WTZ_URL=http://localhost:3000
+API_WTZ_URL=http://prod001.ison-duck.ts.net:3000
 #API_WTZ_URL=http://prod002.ison-duck.ts.net:3000
-API_WTZ_URL=http://localhost:3000
