remove server sider rendering

--- a/code/frontend/angular.json
+++ b/code/frontend/angular.json
@@ -43,11 +43,7 @@
                 "src/assets/scss/"
               ]
             },
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "ssr": false
           },
           "configurations": {
             "production": {
@@ -106,7 +102,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ]
           }
         }
