--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
+    "test": "ng test"
   },
   "prettier": {
     "printWidth": 100,
@@ -29,14 +28,11 @@
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/platform-server": "^20.3.0",
+    "@angular/platform-browser": "^20.3.2",
     "@angular/router": "^20.3.0",
-    "@angular/ssr": "^20.3.2",
     "@popperjs/core": "^2.11.8",
     "@swimlane/ngx-datatable": "^22.0.0",
     "bootstrap": "^5.3.8",
-    "express": "^5.1.0",
     "ngx-toastr": "^19.1.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
@@ -47,9 +43,7 @@
     "@angular/build": "^20.3.2",
     "@angular/cli": "^20.3.2",
     "@angular/compiler-cli": "^20.3.0",
-    "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^20.17.19",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
