--- a/code/backend/.env
+++ b/code/backend/.env
@@ -3,6 +3,11 @@ SQL_PORT=3306
 SQL_DB=system
 SQL_USER=appuser
 SQL_PASS=vyHYPA7lYvBnP
+
 #API_WTZ_URL=http://localhost:3000
 API_WTZ_URL=http://prod001.ison-duck.ts.net:3000
 #API_WTZ_URL=http://prod002.ison-duck.ts.net:3000
+
+LOAD_SCHEDULE="0 0 */12 * * ?" # Aos 0 minutos da hora, a cada 12 horas
+#LOAD_SCHEDULE="0 0 0 * * ?" # Às 00:00
+#LOAD_SCHEDULE="*/1 * * * * ?" # A cada segundo
