--- a/code/backend/.env
+++ b/code/backend/.env
@@ -1,13 +1,16 @@
-SQL_HOST=mysql.ison-duck.ts.net
+SQL_HOST=192.168.15.43
+#SQL_HOST=mysql.ison-duck.ts.net
+
 SQL_PORT=3306
 SQL_DB=system
 SQL_USER=appuser
 SQL_PASS=vyHYPA7lYvBnP
 
 #API_WTZ_URL=http://localhost:3000
-API_WTZ_URL=http://prod001.ison-duck.ts.net:3000
+API_WTZ_URL=http://192.168.15.17:3000
+#API_WTZ_URL=http://prod001.ison-duck.ts.net:3000
 #API_WTZ_URL=http://prod002.ison-duck.ts.net:3000
 
 #LOAD_SCHEDULE="0 0 */12 * * ?" # Aos 0 minutos da hora, a cada 12 horas
 #LOAD_SCHEDULE="0 0 0 * * ?" # Às 00:00
-LOAD_SCHEDULE="*/1 * * * * ?" # A cada segundo
+LOAD_SCHEDULE="* */10 * * * ?" # A cada 10min
