added send wtz to monitoring lists message

--- a/code/backend/.env
+++ b/code/backend/.env
@@ -13,4 +13,4 @@ API_WTZ_URL=http://192.168.15.17:3000
 
 #LOAD_SCHEDULE="0 0 */12 * * ?" # Aos 0 minutos da hora, a cada 12 horas
 #LOAD_SCHEDULE="0 0 0 * * ?" # Às 00:00
-LOAD_SCHEDULE="* */10 * * * ?" # A cada 10min
+LOAD_SCHEDULE="0 */10 * * * ?" # A cada 10min
