--- a/code/frontend/Dockerfile
+++ b/code/frontend/Dockerfile
@@ -2,6 +2,9 @@
 # Usa a imagem oficial do Node 20 LTS (Lightweight Alpine) para o build.
 FROM node:20-alpine as builder
 
+# INSTALAR DEPENDÊNCIAS DE COMPATIBILIDADE PARA ALPINE
+RUN apk add libc6-compat
+
 # Define o diretório de trabalho
 WORKDIR /app
 
