--- a/code/frontend/angular.json
+++ b/code/frontend/angular.json
@@ -56,13 +56,18 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "1.5mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "100kb",
+                  "maximumError": "20kb"
+                },
+                {
+                  "type": "any" ,
+                  "maximumWarning": "100kb",
+                  "maximumError": "20kb"
                 }
               ],
               "outputHashing": "all"
