--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 4200",
-    "build": "ng build",
+    "build": "ng build --no-cache",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
