--- a/code/frontend/Dockerfile
+++ b/code/frontend/Dockerfile
@@ -27,7 +27,7 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copia APENAS os arquivos compilados do estágio anterior
 # ATENÇÃO: SUBSTITUA 'seu-projeto-angular' pelo nome real da pasta de saída do seu build!
-COPY --from=builder /app/dist/dashboard /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Porta padrão de serviço do Nginx
 EXPOSE 80
