--- a/code/backend/.env
+++ b/code/backend/.env
@@ -11,6 +11,6 @@ API_WTZ_URL=http://192.168.15.17:3000
 #API_WTZ_URL=http://prod001.ison-duck.ts.net:3000
 #API_WTZ_URL=http://prod002.ison-duck.ts.net:3000
 
-#LOAD_SCHEDULE="0 0 */12 * * ?" # Aos 0 minutos da hora, a cada 12 horas
-#LOAD_SCHEDULE="0 0 0 * * ?" # Às 00:00
-LOAD_SCHEDULE="0 */10 * * * ?" # A cada 10min
+#LOAD_SCHEDULE=0 0 */12 * * ?
+#LOAD_SCHEDULE=0 0 0 * * ?
+LOAD_SCHEDULE=0 */10 * * * ?
