--- a/code/frontend/nginx.conf
+++ b/code/frontend/nginx.conf
@@ -5,8 +5,23 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # === REGRA DE PROXY REVERSO PARA A API JAVA ===
+    # Intercepta qualquer chamada que comece com /api/ e a envia 
+    # internamente para o contêiner do backend-app
+    location /api/ {
+        # O nome 'backend-app' é o nome do serviço no docker-compose.yml
+        proxy_pass http://backend-app:8080;
+        
+        # Configurações de cabeçalho necessárias
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
+    }
+    
     # Se a URL solicitada não for um arquivo/diretório existente, 
-    # retorna o index.html (necessário para que as rotas do Angular funcionem)
+    # retorna o index.html (necessário para o roteamento do Angular)
     location / {
         try_files $uri $uri/ /index.html;
     }
