added image upload

--- a/code/backend/src/main/resources/application.yml
+++ b/code/backend/src/main/resources/application.yml
@@ -27,6 +27,8 @@ server:
       context-path: /api/v1
 
 file:
+  #images-dir: /opt/app/images
+  images-dir: C:\Temp
   temp-dir: /tmp/files
 
 scheduler:
