--- a/code/backend/.env
+++ b/code/backend/.env
@@ -14,3 +14,9 @@ API_WTZ_URL=http://192.168.15.17
 #LOAD_SCHEDULE=0 0 */12 * * ?
 #LOAD_SCHEDULE=0 0 0 * * ?
 LOAD_SCHEDULE=0 */1 * * * ?
+
+#DIR_IMAGE=C:\Temp
+DIR_IMAGE=/opt/app/images
+
+
+DIR_TEMP=/tmp/files
