update images and var

--- a/code/backend/docker-compose.yml
+++ b/code/backend/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   backend-app:
     build: .
     env_file:
-      - ./.env
+      - ./.env.prod
     ports:
       - "8080:8080"
     restart: always
