update validation to resolv bug send all appointments

--- a/code/backend/src/main/resources/application.yml
+++ b/code/backend/src/main/resources/application.yml
@@ -27,6 +27,9 @@ server:
       context-path: /api/v1
 
 scheduler:
+  max:
+    backlog:
+      minutes: ${MAX_BACKLOG_MINUTES}
   cron:
     scheduleTimeLoad: ${LOAD_SCHEDULE}
 
