--- a/code/backend/src/main/resources/application.yml
+++ b/code/backend/src/main/resources/application.yml
@@ -40,3 +40,7 @@ scheduler:
 file:
   images-dir: ${DIR_IMAGE}
   temp-dir: ${DIR_TEMP}
+
+jwt:
+  secret: ${JWT_SECRET:your-256-bit-secret-key-must-be-at-least-32-characters-long-for-production}
+  expiration: ${JWT_EXPIRATION:86400000}
