[paket] corrigido urls acesso ao backend

--- a/code/frontend/nginx.conf
+++ b/code/frontend/nginx.conf
@@ -17,7 +17,23 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # CRÍTICO: Repassar cookies corretamente para sessão HTTP
+        # O Spring Security usa JSESSIONID para gerenciar sessões
+        proxy_set_header Cookie $http_cookie;
+        proxy_cookie_path /api/v1 /api/v1;
+        
+        # Manter a sessão viva
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        
+        # Não redirecionar (mantém o path original)
         proxy_redirect off;
+        
+        # Buffer settings para melhor performance
+        proxy_buffering off;
+        proxy_buffer_size 4k;
     }
     
     # Se a URL solicitada não for um arquivo/diretório existente, 
