--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -33,6 +33,7 @@
     "@popperjs/core": "^2.11.8",
     "@swimlane/ngx-datatable": "^22.0.0",
     "bootstrap": "^5.3.8",
+    "ngx-mask": "^20.0.3",
     "ngx-toastr": "^19.1.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
