--- a/code/frontend/nginx.conf
+++ b/code/frontend/nginx.conf
@@ -10,6 +10,7 @@ server {
     # internamente para o contêiner do backend-app
     location /api/ {
         # O nome 'backend-app' é o nome do serviço no docker-compose.yml
+        # IMPORTANTE: Preserva o path completo incluindo /api/v1
         proxy_pass http://backend-app:8080;
         
         # Configurações de cabeçalho necessárias
@@ -17,6 +18,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         
         # CRÍTICO: Repassar cookies corretamente para sessão HTTP
         # O Spring Security usa JSESSIONID para gerenciar sessões
@@ -34,6 +37,16 @@ server {
         # Buffer settings para melhor performance
         proxy_buffering off;
         proxy_buffer_size 4k;
+        
+        # Tratamento de erros
+        proxy_intercept_errors on;
+        error_page 502 503 504 /50x.html;
+    }
+    
+    # Página de erro personalizada (opcional)
+    location = /50x.html {
+        root /usr/share/nginx/html;
+        internal;
     }
     
     # Se a URL solicitada não for um arquivo/diretório existente, 
