--- a/code/frontend/nginx.conf
+++ b/code/frontend/nginx.conf
@@ -11,6 +11,8 @@ server {
     location /api/ {
         # O nome 'backend-app' é o nome do serviço no docker-compose.yml
         # IMPORTANTE: Preserva o path completo incluindo /api/v1
+        # Quando proxy_pass NÃO termina com /, o Nginx preserva o path completo
+        # Requisição /api/v1/users -> http://backend-app:8080/api/v1/users
         proxy_pass http://backend-app:8080;
         
         # Configurações de cabeçalho necessárias
