--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -16,6 +16,15 @@ services:
     volumes:
       - images_volume:/opt/app/images
       - files_volume:/opt/app/files
+    healthcheck:
+      # Verifica se a porta 8080 está aberta e respondendo
+      # Usa um endpoint público que sempre retorna resposta (mesmo que erro 400/401)
+      # wget retorna 0 se conseguir conectar (mesmo com erro HTTP)
+      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:8080/api/v1/auth/login || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 90s
 
   angular-frontend:
     build: 
@@ -25,7 +34,8 @@ services:
       - "80:80"
     restart: always
     depends_on:
-      - backend-app
+      backend-app:
+        condition: service_healthy
     networks:
       - app-network
 
