resolv bug docker

--- a/code/backend/.env.prod
+++ b/code/backend/.env.prod
@@ -7,3 +7,4 @@ API_WTZ_URL=http://192.168.15.17
 LOAD_SCHEDULE=0 */10 * * * ?
 DIR_IMAGE=/opt/app/images
 DIR_TEMP=/opt/app/files
+MAX_BACKLOG_MINUTES=5
