--- a/code/backend/Dockerfile
+++ b/code/backend/Dockerfile
@@ -1,20 +1,29 @@
-FROM openjdk:21-jdk-slim
+# --- ESTÁGIO 1: BUILD (Compilação do Projeto) ---
+# Usa a imagem Corretto JDK na base Alpine para compilar
+FROM amazoncorretto:21-alpine-jdk AS build
 
-# Criar diretórios para imagens e arquivos temporários
-# Nota: Quando volumes são montados, eles sobrescrevem o conteúdo do diretório,
-# mas as permissões do diretório base são mantidas
+WORKDIR /app
+
+# [Resto da sua lógica de cópia de pom.xml e src...]
+COPY pom.xml /app/
+COPY src /app/src
+
+# [Resto da sua lógica de build]
+RUN apk update && apk add maven && \
+    mvn clean package -DskipTests
+    
+# --- ESTÁGIO 2: RUNTIME (Imagem Final e Leve) ---
+# Usa a imagem Corretto JRE na base Alpine (muito mais leve)
+FROM amazoncorretto:21-alpine
+
+# [Resto da sua lógica de criação de diretórios e CMD]
 RUN mkdir -p /opt/app/images && \
     mkdir -p /opt/app/files && \
     chmod 777 /opt/app/images && \
     chmod 777 /opt/app/files
 
-WORKDIR /app
+WORKDIR /opt/app
 
-COPY target/system-0.0.1-SNAPSHOT.jar app.jar
-
-# Garantir que os diretórios existam e tenham permissões corretas ao iniciar
-# Isso é importante caso o volume não seja montado ou seja montado vazio
-RUN mkdir -p /opt/app/images /opt/app/files && \
-    chmod -R 777 /opt/app/images /opt/app/files || true
+COPY --from=build /app/target/system-0.0.1-SNAPSHOT.jar app.jar
 
 CMD ["java", "-jar", "app.jar"]
