--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -38,9 +38,9 @@ services:
     networks:
       - app-network
     healthcheck:
-      # Verifica se o processo nginx está rodando
-      # Método mais confiável que funciona em qualquer imagem nginx
-      test: ["CMD-SHELL", "pgrep nginx > /dev/null || exit 1"]
+      # Verifica se o nginx está respondendo HTTP na porta 80
+      # wget retorna 0 se conseguir conectar (mesmo com erro HTTP é válido)
+      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:80 || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
