--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -38,9 +38,7 @@ services:
     networks:
       - app-network
     healthcheck:
-      # Verifica se o nginx está respondendo HTTP na porta 80
-      # wget retorna 0 se conseguir conectar (mesmo com erro HTTP é válido)
-      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:80 || exit 1"]
+      test: ["CMD-SHELL", "ps aux | grep -q '[n]ginx' || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
