--- a/code/frontend/nginx.conf
+++ b/code/frontend/nginx.conf
@@ -7,13 +7,17 @@ server {
 
     # === REGRA DE PROXY REVERSO PARA A API JAVA ===
     # Intercepta qualquer chamada que comece com /api/ e a envia 
-    # internamente para o contêiner do backend-app
     location /api/ {
-        # O nome 'backend-app' é o nome do serviço no docker-compose.yml
+        # Resolver DNS dinamicamente (não valida na inicialização)
+        # 127.0.0.11 é o DNS do Docker
+        resolver 127.0.0.11 valid=10s;
+        
+        # Usa variável para forçar resolução dinâmica em tempo de execução
+        # O nome 'app' é o nome do serviço no docker-compose.yml
         # IMPORTANTE: Preserva o path completo incluindo /api/v1
-        # Quando proxy_pass NÃO termina com /, o Nginx preserva o path completo
-        # Requisição /api/v1/users -> http://backend-app:8080/api/v1/users
-        proxy_pass http://backend-app:8080;
+        # Requisição /api/v1/users -> http://app:8080/api/v1/users
+        set $backend http://app:8080;
+        proxy_pass $backend;
         
         # Configurações de cabeçalho necessárias
         proxy_set_header Host $host;
