mobile apk version

--- a/code/frontend/package.json
+++ b/code/frontend/package.json
@@ -6,7 +6,17 @@
     "start": "ng serve --host 0.0.0.0 --port 4200",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "cap:init": "npx cap init",
+    "cap:add:android": "npx cap add android",
+    "cap:add:ios": "npx cap add ios",
+    "cap:sync": "npx cap sync",
+    "cap:copy": "npx cap copy",
+    "cap:update": "npx cap update",
+    "cap:open:android": "npx cap open android",
+    "cap:open:ios": "npx cap open ios",
+    "cap:build:android": "npm run build && npx cap sync && cd android && ./gradlew assembleDebug",
+    "cap:build:android:release": "npm run build && npx cap sync && cd android && ./gradlew assembleRelease"
   },
   "prettier": {
     "printWidth": 100,
@@ -30,6 +40,13 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.2",
     "@angular/router": "^20.3.0",
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/app": "^7.1.0",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/ios": "^7.4.4",
+    "@capacitor/splash-screen": "^7.0.3",
+    "@capacitor/status-bar": "^7.0.3",
     "@popperjs/core": "^2.11.8",
     "@swimlane/ngx-datatable": "^22.0.0",
     "bootstrap": "^5.3.8",
