--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '21'
 
       - name: Install dependencies
         working-directory: code/frontend
@@ -40,6 +40,9 @@ jobs:
       - name: Build Angular app
         working-directory: code/frontend
         run: npm run build
+
+      - name: Verify Java version
+        run: java -version
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
