--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -60,27 +60,39 @@ jobs:
           chmod +x gradlew
           ./gradlew assembleDebug --no-daemon
 
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ipbf-app
-          path: code/frontend/android/app/build/outputs/apk/debug/ipbf-app.apk
-          retention-days: 90
+      - name: Rename APK
+        run: |
+          APK_PATH="code/frontend/android/app/build/outputs/apk/debug/app-debug.apk"
+          NEW_APK_PATH="code/frontend/android/app/build/outputs/apk/debug/ipbf-app.apk"
+          if [ -f "$APK_PATH" ]; then
+            mv "$APK_PATH" "$NEW_APK_PATH"
+            echo "APK renomeado para: $NEW_APK_PATH"
+            ls -lh "$NEW_APK_PATH"
+          else
+            echo "ERRO: Arquivo APK não encontrado em $APK_PATH"
+            exit 1
+          fi
 
-      - name: Create Release (if tag)
-        if: github.event_name == 'release'
+      - name: Create Release and Upload APK
         uses: softprops/action-gh-release@v1
         with:
           files: code/frontend/android/app/build/outputs/apk/debug/ipbf-app.apk
+          tag_name: build-${{ github.sha }}
+          name: Build ${{ github.sha }}
+          body: |
+            APK gerado automaticamente
+            - Commit: ${{ github.sha }}
+            - Branch: ${{ github.ref_name }}
+            - Data: ${{ github.event.head_commit.timestamp }}
           draft: false
-          prerelease: false
+          prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Output download URL
         run: |
-          echo "APK disponível para download em:"
-          echo "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          echo "✅ APK disponível para download em:"
+          echo "https://github.com/${{ github.repository }}/releases/tag/build-${{ github.sha }}"
           echo ""
-          echo "Ou baixe diretamente do artifact 'ipbf-app'"
+          echo "📱 Nome do arquivo: ipbf-app.apk"
 
