--- a/code/frontend/src/assets/app-config.json
+++ b/code/frontend/src/assets/app-config.json
@@ -1,6 +1,6 @@
 {
   "serverUrl": "http://prod002.ison-duck.ts.net/home",
-  "appName": "IPBF Dashboard",
-  "version": "1.0.0"
+  "appName": "IPBF Admin",
+  "version": "1.2.0"
 }
 
