melhoria tela de whatsapp - reconectar, login pelo admin

--- a/code/frontend/src/assets/app-config.json
+++ b/code/frontend/src/assets/app-config.json
@@ -1,5 +1,5 @@
 {
-  "serverUrl": "http://prod002.ison-duck.ts.net/home",
+  "serverUrl": "http://prod002.ison-duck.ts.net/landing",
   "appName": "IPBF Admin",
   "version": "1.2.0"
 }
