--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     env_file:
-      - ./backend/.env.prod
+      - ./backend/.env.dev
     environment:
       - JAVA_TOOL_OPTIONS=-Duser.timezone=America/Sao_Paulo
     ports:
