--- a/code/backend/.env
+++ b/code/backend/.env
@@ -1,4 +1,9 @@
+## DEV
 SQL_HOST=192.168.15.43
+#SQL_HOST=mysql-dev.ison-duck.ts.net
+
+## PROD
+#SQL_HOST=192.168.15.43
 #SQL_HOST=mysql.ison-duck.ts.net
 
 MAX_BACKLOG_MINUTES=5
