melhoria na forma de deploys

--- a/code/backend/docker-compose.yml
+++ b/code/backend/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   backend-app:
     build: .
     env_file:
-      - ./.env.dev
+      - ./.env
     ports:
       - "7000:7000"
     restart: always
