--- a/code/backend/.env.example
+++ b/code/backend/.env.example
@@ -3,7 +3,7 @@ SQL_PORT=3306
 SQL_DB=system
 SQL_USER=
 SQL_PASS=
-API_WTZ_URL=
+API_WTZ_URL=http://192.168.15.173:3000
 LOAD_SCHEDULE=
 DIR_IMAGE=/opt/app/images
 DIR_TEMP=/opt/app/files
