update to use in VPS

--- a/code/backend/.env
+++ b/code/backend/.env
@@ -1,22 +1,10 @@
-SQL_HOST=192.168.15.75
-#SQL_HOST=mysql.ison-duck.ts.net
-
-MAX_BACKLOG_MINUTES=5
-
+SQL_HOST=db
 SQL_PORT=3306
 SQL_DB=system
 SQL_USER=appuser
 SQL_PASS=vyHYPA7lYvBnP
-
-#API_WTZ_URL=http://localhost:3000
-API_WTZ_URL=http://192.168.15.173:3000
-#API_WTZ_URL=http://prod001.ison-duck.ts.net:3000
-#API_WTZ_URL=http://prod002.ison-duck.ts.net:3000
-
-#LOAD_SCHEDULE=0 0 */12 * * ?
-#LOAD_SCHEDULE=0 0 0 * * ?
-LOAD_SCHEDULE=0 */1 * * * ?
-
-#DIR_IMAGE=C:\Temp
+API_WTZ_URL=http://localhost:3000
+LOAD_SCHEDULE=0 0 0 * * ?
 DIR_IMAGE=/opt/app/images
-DIR_TEMP=/tmp/files
+DIR_TEMP=/opt/app/files
+MAX_BACKLOG_MINUTES=5
