--- a/code/backend/.env.prod
+++ b/code/backend/.env.prod
@@ -1,9 +1,9 @@
-SQL_HOST=192.168.15.43
+SQL_HOST=db
 SQL_PORT=3306
 SQL_DB=system
 SQL_USER=appuser
 SQL_PASS=vyHYPA7lYvBnP
-API_WTZ_URL=http://192.168.15.173:3000
+API_WTZ_URL=http://localhost:3000
 LOAD_SCHEDULE=0 0 0 * * ?
 DIR_IMAGE=/opt/app/images
 DIR_TEMP=/opt/app/files
