update urls and ips

--- a/code/backend/.env.example
+++ b/code/backend/.env.example
@@ -1,10 +1,10 @@
-SQL_HOST=mysql.ison-duck.ts.net
+SQL_HOST=db
 SQL_PORT=3306
 SQL_DB=system
 SQL_USER=
 SQL_PASS=
-API_WTZ_URL=http://192.168.15.173:3000
-LOAD_SCHEDULE=
+API_WTZ_URL=http://localhost:3000
+LOAD_SCHEDULE=0 */30 * * * ?
 DIR_IMAGE=/opt/app/images
 DIR_TEMP=/opt/app/files
 MAX_BACKLOG_MINUTES=
