--- a/code/backend/.env
+++ b/code/backend/.env
@@ -1,8 +1,8 @@
-SQL_HOST=51.178.53.84
+SQL_HOST=192.168.15.75
 SQL_PORT=3306
-SQL_DB=system_dev
+SQL_DB=system
 SQL_USER=appuser
-SQL_PASS=vyHYPA7lYvBnP
+SQL_PASS=vyHYPA7lYvBnP 
 API_WTZ_URL=http://51.178.53.84:3000
 LOAD_SCHEDULE=0 */5 * * * ?
 DIR_IMAGE=/opt/app/images
