--- a/code/backend/.env.dev
+++ b/code/backend/.env.dev
@@ -1,7 +1,7 @@
 SQL_HOST=51.178.53.84
 SQL_PORT=3306
 SQL_DB=system_dev
-SQL_USER=appuser
+SQL_USER=appuser_dev
 SQL_PASS=vyHYPA7lYvBnP
 API_WTZ_URL=http://51.178.53.84:3000
 LOAD_SCHEDULE=0 */5 * * * ?
